<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ActivityPhoto">

    <TextView
        android:id="@+id/location_PA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#7B1FA2"
        android:text="@string/location_"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/office_PA"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/office"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/name_PA"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/name_PA"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/location_PA"
        tools:layout_editor_absoluteX="8dp" />

    <ImageView
        android:id="@+id/photo_PA"
        android:layout_width="366dp"
        android:layout_height="364dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/official_image"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/office_PA"
        app:srcCompat="@drawable/placeholder" />

    <ImageView
        android:id="@+id/partyLogo_PA"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="-20dp"
        android:contentDescription="@string/party_logo"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/photo_PA"
        app:layout_constraintEnd_toEndOf="@+id/photo_PA"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/photo_PA"
        app:srcCompat="@drawable/dem_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>